EDAN01/minizinc-1.6/tests/type-inst-checking/flatzinc/f-builtins-bad.err_exp
f-builtins-bad.fzn:12: symbol error: `ceil' undeclared
f-builtins-bad.fzn:13: symbol error: `floor' undeclared
f-builtins-bad.fzn:14: symbol error: `round' undeclared
f-builtins-bad.fzn:16: symbol error: `index_set' undeclared
f-builtins-bad.fzn:18: symbol error: `sum' undeclared
f-builtins-bad.fzn:19: symbol error: `product' undeclared
f-builtins-bad.fzn:21: symbol error: `array_union' undeclared
f-builtins-bad.fzn:22: symbol error: `array_intersect' undeclared
f-builtins-bad.fzn:27: symbol error: `card' undeclared
f-builtins-bad.fzn:29: symbol error: `min' undeclared
f-builtins-bad.fzn:30: symbol error: `max' undeclared
f-builtins-bad.fzn:32: symbol error: `minimum' undeclared
f-builtins-bad.fzn:33: symbol error: `maximum' undeclared
f-builtins-bad.fzn:35: symbol error: `foldl' undeclared
f-builtins-bad.fzn:36: symbol error: `foldr' undeclared
f-builtins-bad.fzn:39: symbol error: `holds' undeclared
